--- a/vrienden.html
+++ b/vrienden.html
@@ -57,7 +57,7 @@
    <center>
    <div class="Tamer">
    <h1>
-   <a style="color:green;" href="hhttps://tctam.nl/?blank-tab-cloudwise">Tamer Çevik main site</a>
+   <a style="color:green;" href="https://tctam.nl/?blank-tab-cloudwise">Tamer Çevik main site</a>
    </h1>
    <h1>
       <a style="color:green;" href="https://tctam.nl/s-site/">Tamer Çevik schoolsite</a>
