--- a/vrienden.html
+++ b/vrienden.html
@@ -47,7 +47,7 @@
       <h1>
          <a style="color:red;" href="https://theprogrammerdr.github.io/">Dante Roerink</a>
       </h1>
-      <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praak vaak met hem. Soms is hij een beetje druk maar meestal niet. Hij is hele goede vrienden met Thom van Nobelen.</h2>
+      <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praat vaak met hem. Soms is hij een beetje druk maar meestal niet. Hij is hele goede vrienden met Thom van Nobelen.</h2>
       <br>
    </center>
    </div>
