--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </center>
 </div>
 </div>
-<!--h2 is een kleiner lettertype dan h1.-->
+<!--h2 is een groter lettertype dan h1 in chrome.-->
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt op school. Ik heb deze site gemaakt voor een opdracht voor het vak informatica en vond het zelf super leuk om deze site te maken.</h2>
 </div>
 <br>
